--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,22 @@ footer {
     height: auto;
     display: block;
 }
+
+@media screen and (max-width: 600px) {
+    /* Adjust styles for screens 600px and smaller */
+    main {
+        padding: 1em;
+    }
+
+    .video-container {
+        max-width: 100%;
+    }
+}
+
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+    /* Adjust styles for screens between 601px and 1024px */
+    main {
+        padding: 1.5em;
+    }
+}
+
