--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,11 @@ body, h1, h2, p, ul {
     padding: 0;
 }
 
-/* Basic Styling */
 body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
-    color: #333;
-    background-color: #f4f4f4;
+    color: #555;
+    background-color: #f8f8f8;
 }
 
 header {
@@ -33,6 +32,7 @@ nav ul {
 nav a {
     text-decoration: none;
     color: #fff;
+    font-weight: bold;
 }
 
 main {
@@ -40,45 +40,60 @@ main {
 }
 
 section {
-    margin-bottom: 2em;
+    margin-bottom: 3em; /* Increased margin for better spacing */
 }
 
 footer {
-    background-color: #2c3e50;
+    background-color: #3498db;
     color: #fff;
     padding: 1em;
     text-align: center;
 }
-/* Style for Video Frame */
+
+.image-container {
+    margin-bottom: 2em; /* Increased margin for better spacing */
+}
+
+.image-container img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 1em;
+    transition: transform 0.3s;
+}
+
+.image-container img:hover {
+    transform: scale(1.2);
+}
+
 .video-container {
-    max-width: 600px;
+    position: relative;
+    max-width: 800px; /* Adjusted maximum width for better responsiveness */
     margin: 0 auto;
     border: 2px solid #ddd;
     border-radius: 8px;
     overflow: hidden;
 }
 
-.video-container {
-    max-width: 600px;
-    margin: 0 auto;
-    border: 2px solid #ddd;
-    border-radius: 8px;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.video-container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    pointer-events: none;
+    transition: opacity 0.3s;
 }
 
 .video-container video {
     width: 100%;
     height: auto;
     display: block;
+    z-index: 2;
 }
 
-@media screen and (min-width: 601px) and (max-width: 1024px) {
-    /* Adjust styles for screens between 601px and 1024px */
-    main {
-        padding: 1.5em;
-    }
+.video-container video:not(:paused) + ::before {
+    opacity: 0;
 }
-
